[package]
name = "melior-macro"
version = "0.19.0"
edition.workspace = true
description = "Internal macros for Melior"
documentation = "https://mlir-rs.github.io/melior/melior/"
readme.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true

[lib]
proc-macro = true

[dependencies]
comrak = { version = "0.50.0", default-features = false }
convert_case = "0.11.0"
proc-macro2 = "1"
quote = "1"
regex = "1.12.3"
syn = { version = "2", features = ["full"] }
tblgen = { version = "0.7.2", default-features = false, features = [
  "llvm21-0",
] }
unindent = "0.2.4"

[dev-dependencies]
melior = { path = "../melior", features = ["ods-dialects"] }
mlir-sys = { git = "https://github.com/j-walther/mlir-sys.git", rev = "eef11c237861db49a48c2ab8c6b3f5384328fe59" }
pretty_assertions = "1.4.1"
