[package]
name = "melior"
version = "0.26.3"
edition.workspace = true
description = "The rustic MLIR bindings in Rust"
documentation = "https://mlir-rs.github.io/melior/melior/"
readme.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories = ["api-bindings"]

[dependencies]
melior-macro = { path = "../macro", version = "0.19.0" }
mlir-sys = { git = "https://github.com/j-walther/mlir-sys.git", rev = "eef11c237861db49a48c2ab8c6b3f5384328fe59" }

[dev-dependencies]
indoc = "2.0.7"
insta = "1.46.3"
pretty_assertions = "1.4.1"

[features]
# Enable the BlockExt trait (requires ods feature)
helpers = ["ods-dialects"]
ods-dialects = []
